Got more info from the flight API, Fixed date picker on safari

--- a/public/css/source/sass/main.scss
+++ b/public/css/source/sass/main.scss
@@ -1,4 +1,4 @@
-$body-background: #FEFEFE;
+$body-background: #FFFFFF;
 $primary-color: #333;
 
 $primary-font-size: 20pt;
@@ -12,8 +12,8 @@ body, html {
     background: $body-background;
     color: $primary-color;
 
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-    font-size: $primary-font-size;
+    // font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    // font-size: $primary-font-size;
 }
 p {
     font-size: $p-font-size;
